Bug 1872929 - Don't allow text-wrap:balance adjustment to cause an overflow-wrap line break to be used. r=layout-reviewers,emilio

Differential Revision: https://phabricator.services.mozilla.com/D199974