layout/generic/nsBlockFrame.h
@@ -552,6 +552,8 @@ class nsBlockFrame : public nsContainerFrame {
     const nscoord mConsumedBSize;
     const nscoord mEffectiveContentBoxBSize;
     bool mNeedFloatManager;
+    // [out] Whether reflowing resulted in use of an overflow-wrap break.
+    bool mUsedOverflowWrap = false;
     // Settings for the current trial.
     bool mBalancing = false;
     nscoord mInset = 0;
@@ -581,6 +583,7 @@ class nsBlockFrame : public nsContainerFrame {
       mFcBounds.Clear();
       mBlockEndEdgeOfChildren = 0;
       mContainerWidth = 0;
+      mUsedOverflowWrap = false;
     }
   };
 
@@ -736,8 +739,11 @@ class nsBlockFrame : public nsContainerFrame {
    */
   void PrepareResizeReflow(BlockReflowState& aState);
 
-  /** reflow all lines that have been marked dirty */
-  void ReflowDirtyLines(BlockReflowState& aState);
+  /**
+   * Reflow all lines that have been marked dirty.
+   * Returns whether an overflow-wrap break was used anywhere.
+   */
+  bool ReflowDirtyLines(BlockReflowState& aState);
 
   /** Mark a given line dirty due to reflow being interrupted on or before it */
   void MarkLineDirtyForInterrupt(nsLineBox* aLine);
@@ -754,8 +760,10 @@ class nsBlockFrame : public nsContainerFrame {
    *   more inline frames.
    * @param aKeepReflowGoing [OUT]
    *   indicates whether the caller should continue to reflow more lines
+   * @returns
+   *   whether an overflow-wrap breakpoint was used
    */
-  void ReflowLine(BlockReflowState& aState, LineIterator aLine,
+  bool ReflowLine(BlockReflowState& aState, LineIterator aLine,
                   bool* aKeepReflowGoing);
 
   // Return false if it needs another reflow because of reduced space
@@ -798,7 +806,8 @@ class nsBlockFrame : public nsContainerFrame {
   void ReflowBlockFrame(BlockReflowState& aState, LineIterator aLine,
                         bool* aKeepGoing);
 
-  void ReflowInlineFrames(BlockReflowState& aState, LineIterator aLine,
+  // Returns whether an overflow-wrap break was used.
+  bool ReflowInlineFrames(BlockReflowState& aState, LineIterator aLine,
                           bool* aKeepLineGoing);
 
   void DoReflowInlineFrames(
