layout/generic/nsLineLayout.h
@@ -53,7 +53,10 @@ class nsLineLayout {
                        // the effective available space on the line.
                        nscoord aInset = 0);
 
-  void EndLineReflow();
+  /**
+   * Returns true if the line had to use an overflow-wrap break position.
+   */
+  bool EndLineReflow();
 
   /**
    * Called when a float has been placed. This method updates the
@@ -330,6 +333,11 @@ class nsLineLayout {
 
   void SetSuppressLineWrap(bool aEnabled) { mSuppressLineWrap = aEnabled; }
 
+  /**
+   * Record that the line had to resort to an overflow-wrap break.
+   */
+  void SetUsedOverflowWrap() { mUsedOverflowWrap = true; }
+
  protected:
   // This state is constant for a given block frame doing line layout
 
@@ -585,6 +593,7 @@ class nsLineLayout {
   bool mLineAtStart : 1;
   bool mHasRuby : 1;
   bool mSuppressLineWrap : 1;
+  bool mUsedOverflowWrap : 1;
 
   int32_t mSpanDepth;
 #ifdef DEBUG
